Prepare for release 2026r2